# ILLIXR

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  all.sh  apitrace  chaff.py  clean.py  clean.sh  common.py  coordinate_transformations.py  cpu_timer3_parser.py  experiment.py  experiment.sh  flake.nix  illixr_native_gl.yaml  illixr_native_lookup.yaml  install_deps.sh  load_gt.py  poses.csv  runner.sh  shell.nix  sqlite_record_reader.py  util.py  video_dist.py  visualize_pose.py
cmake/: ConfigurationSummary.cmake  GetAudio_Pipeline.cmake  GetGTSAM.cmake  GetMonado.cmake  GetOpenVINS.cmake  GetYamlcpp.cmake  HelperFunctions.cmake
common/: Makefile  common.mk  cpu_timer.hpp  cpu_timer3.hpp  data_format.hpp  decoder.hpp  dynamic_lib.hpp  encoder.hpp  error_util.hpp  extended_window.hpp  flake.nix  frame_info.hpp  global_module_defs.hpp  linalg.hpp  logger.hpp  math_util.hpp  phonebook.hpp  plugin.hpp  pose_prediction.hpp  record_logger.hpp  relative_clock.hpp  reprojection.hpp  runtime.hpp  shader_util.hpp  switchboard.hpp  threadloop.hpp
configs/: approx_config_pose_accuracy.yaml  approx_config_ssim.yaml  audio.yaml  ci.yaml  clean.yaml  core_plugins.yaml  demo.yaml  deviation.yaml  godot_material.yaml  ground_truth_ssim.yaml  headless.yaml  hologram.yaml  infinitam.yaml  kimera-vio.yaml  materials.yaml  monado-mainline.yaml  monado-pose-lookup.yaml  monado-vk.yaml  monado.yaml  native-gl.yaml  native-ground-truth.yaml  native-lookup.yaml  native-pose-lookup.yaml  native.yaml  offline_imu.yaml  offload-device.yaml  offload-monado-device.yaml  offload-monado.yaml  offload-rendering-client.yaml  offload-rendering-server.yaml  offload-server.yaml  offload_device.yaml  offload_server.yaml  offload_sr_device.yaml  offload_sr_server.yaml  offload_sr_server_decoupled_compression.yaml  openxr_app.yaml  openxrdemo.yaml  platformer.yaml  pose_accuracy_ssim.yaml  (+6 more)
cs527_report/: comment.cut  conclusion.tex  figures.tex  implementation.tex  introduction.tex  main.bib  main.tex  problem.tex
dataset_tools/: dataset.hpp  euroc_mav.hpp  tum_vie.hpp
debugview/: plugin.cpp
depthai/: plugin.cpp
docs/: building_illixr_on_jetson.md  getting_started.md  illixr_on_arm.md  illixr_plugins.md  writing_your_plugin.md
frame_logger/: plugin.cpp
gldemo/: Makefile  flake.nix  plugin.cpp
gldemo_/: Makefile  plugin.cpp
ground_truth_slam/: data_loading.hpp  plugin.cpp
gtsam_integrator/: plugin.cpp
infinitam/: CMakeLists.txt  Makefile  UIEngine.cpp  UIEngine.h  calib.txt  csv_iterator.hpp  data_loading.hpp  plugin.cpp  plugin_dataset.cpp  real_calib.txt  test_plugin.cpp
infinitam/Apps/: CMakeLists.txt
infinitam/Apps/InfiniTAM/: CMakeCache.txt  CMakeLists.txt  FernRelocLib  ITMLib  InputSource  Makefile  MiniSlamGraphLib  ORUtils  cmake_install.cmake
infinitam/Apps/InfiniTAM_cli/: CLIEngine.cpp  CLIEngine.h  CMakeLists.txt
infinitam/ITMLib/: orig_CMakeLists.txt
infinitam/ITMLib/Core/: ITMBasicEngine.tpp  ITMBasicSurfelEngine.tpp  ITMMultiEngine.tpp
infinitam/ITMLib/Objects/Camera/: ITMCalibIO.cpp
infinitam/ITMLib/Utils/: ITMLibSettings.cpp
infinitam/InputSource/: RealSense2Engine.cpp
infinitam/ORUtils/: FileUtils.cpp
infinitam/cmake/: LinkGLUT.cmake  LinkOpenNI.cmake  LinkRealSense2.cmake  UseCUDA.cmake  UseOpenNI.cmake  UseRealSense2.cmake
ipc_server/: CMakeLists.txt  Makefile  common  ipc_server.cpp  plugin.cpp  temp_ipc_server.cpp
ipc_server/common/: .data_format.hpp.swp
ipc_server/common/gl_util/: obj.hpp
mesh_compression/: CMakeLists.txt  plugin.cpp
mesh_decompression/: CMakeLists.txt  README.md  plugin.cpp
mesh_encoding/: .plugin.cpp.swp  Makefile  plugin.cpp
mesh_preprocessing/: .plugin.cpp.swp  plugin.cpp
mxre_reader/: plugin.cpp
mxre_writer/: plugin.cpp
nixos/: README.md  machine-config.nix  result
offline_TUM/: common  csv_iterator.hpp  data_loading.hpp  plugin.cpp  plugin_rgb_depth.cpp
offline_cam/: data_loading.hpp
offline_imu_cam/: cam_dataset.hpp  csv_iterator.hpp  data_loading.hpp  euroc_mav.hpp  imu_dataset.hpp  plugin.cpp  tum_vie.hpp
offline_rgbd/: csv_iterator.hpp  data_loading.hpp  plugin.cpp
offline_scannet/: csv_iterator.hpp  data_loading.hpp  plugin.cpp
offload_data/: plugin.cpp
offload_gldemo/: plugin.cpp
offload_gldemo/server_tx/: CMakeLists.txt  Makefile  gldemo_output.proto  plugin.cpp
offload_rendering/client/: CMakeLists.txt  plugin.cpp  video_decoder.cpp  video_decoder.h
offload_rendering/server/: CMakeLists.txt  plugin.cpp  video_encoder.cpp  video_encoder.h
offload_sr/device_rx/: CMakeLists.txt  plugin.cpp  sr_output.proto
offload_sr/device_tx/: .plugin.cpp.swp  CMakeLists.txt  common  plugin.cpp  sr_input.proto
offload_sr/server_tx/: CMakeLists.txt  plugin.cpp  sr_input.proto
offload_vio/device_tx/: CMakeLists.txt  imu_features.proto  plugin.cpp  useffmpeg.cmake  video_encoder.cpp  vio_input.proto
open_chisel/: CMakeLists.txt  Makefile  plugin.cpp
open_chisel/include/open_chisel/: Chisel.h  ProjectionIntegrator.h  Server.h
open_chisel/include/open_chisel/camera/: DepthImage.h  PinholeCamera.h
open_chisel/include/open_chisel/marching_cubes/: MarchingCubes.h
open_chisel/src/: Chisel.cpp  ChiselServer.cpp  ChunkManager.cpp  Makefile
open_chisel/src/camera/: PinholeCamera.cpp
open_chisel/src/geometry/: Frustum.cpp
openwarp_gl/: plugin.cpp
openxrdemo/: CMakeLists.txt  plugin.cpp
payload_generation/: CMakeLists.txt  illixr_ipc.proto  plugin.cpp
payload_generation/common/: .data_format.hpp.swp
plugins/display_vk/: CMakeLists.txt  plugin.cpp
plugins/fauxpose/: CMakeLists.txt
plugins/gtsam_integrator/: CMakeLists.txt
plugins/native_renderer/: CMakeLists.txt  plugin.cpp
plugins/offload_data/: CMakeLists.txt  plugin.cpp
plugins/pose_lookup/: CMakeLists.txt
plugins/timewarp_vk/: CMakeLists.txt  plugin.cpp
plugins/vkdemo/: CMakeLists.txt  plugin.cpp
tests/: CMakeLists.txt  test_cpu_timer.cpp  test_switchboard.cpp
unreal/: CMakeLists.txt  draco_decode.cpp  illixr_ipc.pb.cc  illixr_ipc.pb.h  illixr_ipc.proto  ipc_server.cpp  plugin.cpp
(+105 files in other folders)
